updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Creative-minded individual ready to take on new challanges</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Northridge, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Creating and playing music with friends</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Anything where I am involved with music!</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Austin</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>As a perfectionist, this is going to be great for my OCD. In all seriousness, this has been something I've always wanted to explore.</p>
     </section>
 
     <footer id="footer">
